# cscg2022-challs

./: README.md
backdoor/: backdoor.cue
backdoor/deploy/setup/: Dockerfile  flag  ping
backdoor/deploy/source/: chaingen.py  code.sq  compiler.py  complete.py  encoder.py  mem.sq
backdoor/public/: Dockerfile  flag  ping  ping-backup
backdoor/solution/: solution.txt
secureboot/: secureboot.cue
secureboot/deploy/setup/: Dockerfile  server.py
secureboot/deploy/source/: CMakeLists.txt  checksums.txt  sign.py  toolchain.cmake
secureboot/deploy/source/src/: boot.S  linker.ld
secureboot/public/: server.py  testsigned_images
secureboot/solution/cry/: Cargo.toml  poc.py  verify.py
secureboot/solution/cry/src/: main.rs
secureboot/solution/pwn/: flag  gen_payload.py  lookup.py  make_lookup.py  payload  poc.py
secureboot/solution/rev/: poc.py
